--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "connect": "^3.6.6",
     "express": "^4.16.3",
+    "join-path": "^1.1.1",
     "pigpio": "^1.0.0"
   }
 }
