--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@okta/oidc-middleware": "^0.1.2",
     "connect": "^3.6.6",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "pigpio": "^1.0.0"
   }
 }
