--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@okta/oidc-middleware": "^0.1.2",
     "connect": "^3.6.6",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "pigpio": "^1.0.0"
