--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.15.6",
     "pigpio": "^1.0.0",
     "raspi": "^5.0.2",
-    "raspi-serial": "^5.0.0"
+    "raspi-serial": "^5.0.0",
+    "serialport": "^6.2.0"
   }
 }
